# gui

./: CMakeLists.txt
src/: demo.cpp  display.cpp  display.hpp  eventHandler.cpp  eventHandler.hpp  timer.hpp  widget.hpp
stf/: paper.excalidraw  paper.txt
